# advanced-image-processing-methods

./: .gitignore  README.md
homework_1/: README.md  REPORT.tex  RESULTS.md  pyproject.toml
homework_1/src/mw79on_submission/: main.py
homework_2/: README.md  REPORT.tex  RESULTS.md  pyproject.toml
homework_2/src/mw79on_submission_hw2/: __init__.py  main.py
homework_3/: README.md  REPORT.tex  pyproject.toml
homework_3/src/mw79on_submission_hw3/: __init__.py  main.py
homework_4/: README.md  REPORT.tex  pyproject.toml
homework_4/src/mw79on_submission_hw4/: __init__.py  main.py
homework_5/: README.md  REPORT.tex  pyproject.toml
homework_5/notebooks/: executed_kaggle_runner.ipynb  kaggle_runner.ipynb
homework_5/output/: training_output
homework_5/src/mw79on_submission_hw5/: __init__.py  main.py
homework_6/: README.md  REPORT.tex  pyproject.toml
homework_6/output/: metrics.csv  metrics.md  run_log.txt
homework_6/src/mw79on_submission_hw6/: __init__.py  main.py
